<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/sensor_statusbar"
        layout="@layout/sensor_status" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_bandbreite"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_bandwidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="600" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_messkopfabstand_bus_band_mm"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_measurement_head_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="Rolldiameter"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_rolldiameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="Belt Thickness"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_beltthickness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_maximale_schrittmotorablenkung_rechts_in_steps_halbschritte_hint"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_max_stepper_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="120" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_maximale_schrittmotorablenkung_links_in_steps_halbschritte"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_max_stepper_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="120" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_mittenabgleich_anteil_auf_der_linken_seite"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_center_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="0" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_montagewinkel_in_laufrichtung_korrekturfaktor_100_1"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_measurement_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_schrittmotorgeschwindigkeit_in_schrittzeit_in_ms_10"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_measurement_motor_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="20"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_steuerbyte_f_r_heizung_bit0"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_control_byte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="0" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fivedp"
                android:text="@string/input_ignorierte_h_he_in_mm_10"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parameter_ignored_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8"
                android:text="0" />


        </LinearLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_save" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/taring_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_taring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_taring" />

        <TextView
            android:id="@+id/taring_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fivedp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="TARING STATUS..." />

        <TextView
            android:id="@+id/progress_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="left"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/primaryDarkColor"
            tools:text="0%" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:secondaryProgress="100" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>