<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <include
        android:id="@+id/sensor_statusbar"
        layout="@layout/sensor_status"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_lasersettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/fivedp"
            android:text="@string/laser_settings"
            android:textAlignment="textStart"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_marginRight="@dimen/tendp"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/title_enter_the_ip_address"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/default_ip" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_marginRight="@dimen/tendp"
            android:ems="10"
            android:hint="@string/title_enter_the_port_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/default_port" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connectstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_start"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="5dp"
            android:background="@drawable/toggle_on"
            android:padding="@dimen/tendp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_delete"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/ic_baseline_delete_forever_24"
            android:padding="@dimen/tendp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="@dimen/fivedp"
        android:text="@string/title_output"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/output_parameter1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/output_parameter2"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/output_parameter3"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/output_parameter4"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/output_parameter6"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tendp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/md_grey_300"
                    app:cardCornerRadius="@dimen/tendp"
                    app:cardElevation="@dimen/tendp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:text="@string/loss_steps"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtvw_op6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tendp"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            tools:text="1000" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>